wrong selection turns red, added start and restart buttons, and added states to display state for timing

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -15,3 +15,7 @@ scripts=["res://scripts/main.gd"]
 [linked_properties]
 
 Node2D:scale=true
+
+[dialog_bounds]
+
+create_new_node=Rect2(5116, 740, 1800, 1400)
