correct pattern is highlighted green

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -16,10 +16,14 @@ scripts=["res://scripts/main.gd"]
 
 Node2D:scale=true
 Button:scale=true
+Label:scale=true
+MultiNodeEdit:scale=true
+Camera2D:zoom=true
+Camera2D:scale=true
 
 [dialog_bounds]
 
-create_new_node=Rect2(5116, 740, 1800, 1400)
+create_new_node=Rect2(3320, 740, 1800, 1400)
 
 [color_picker]
 
