--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -20,11 +20,22 @@ Label:scale=true
 MultiNodeEdit:scale=true
 Camera2D:zoom=true
 Camera2D:scale=true
+Sprite2D:scale=true
 
 [dialog_bounds]
 
 create_new_node=Rect2(3320, 740, 1800, 1400)
+project_settings=Rect2(6368, 704, 1800, 1400)
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.431373, 0.431373, 0.431373, 1)
+recent_presets=PackedColorArray(0, 0.541176, 0.376471, 1, 8.19817e-07, 0.451753, 0.311752, 1, 0, 0.45098, 0.309804, 1, 7.13539e-07, 0.392824, 0.267874, 1, 0.188235, 0.294118, 0.215686, 1, 0.196078, 0.482353, 0.270588, 1, 0.913725, 0.247059, 0.105882, 1, 0.266667, 0.772549, 0.4, 1, 0.196078, 0.388235, 0.247059, 1)
+
+[2d_editor]
+
+grid_offset=Vector2(0, 0)
+grid_step=Vector2(8, 8)
+primary_grid_steps=8
+snap_rotation_offset=0.0
+snap_rotation_step=0.261799
+snap_scale_step=0.1
