changed buttons, added status, and added new sound for sequence complete

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/button_border.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://scenes/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://sounds/sequence_complete.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://sounds/", "res://scripts/", "res://scenes/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/main.gd"]
+open_scripts=["res://scenes/grid_button.gd", "res://scripts/main.gd"]
 selected_script="res://scripts/main.gd"
 open_help=[]
 script_split_offset=140
